@@ -5,6 +5,7 @@
 Version 1.4.4 - CVS
 -------------------
   - Get alternating row colors of addressbook in sync with mailbox list.
+  - Fix bug in detecting the delimiter in a folder moved to trash.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
